test/sema/too-few-generic-arguments.delta
// RUN: not %delta -typecheck %s | %FileCheck %s

T foo<T, U>(T a, U b) { return a; }

// CHECK: [[@LINE+1]]:31: error: too few generic arguments to 'foo', expected 2
void main() { var f = foo<int>(1, 2); }
